--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -479,8 +479,9 @@ th.next
   left 50%
   margin-left -330px
   background #fff
-  top 20%
-  height 388px
+  top 10%
+  //height 388px
+  height 250px
   overflow-y auto
   .close
     outline none
@@ -520,10 +521,10 @@ th.next
     h3
       margin-top 0
     .product-text
-      height 270px
+      height 90px
       overflow auto
     .product-options
-      font-size 10px
+      font-size 12px
       color #ccc
       margin-bottom 10px
     .modal-body
@@ -532,7 +533,7 @@ th.next
     .modal-footer
       position absolute
       height 60px
-      top 305px
+      top 125px
       right 10px
       width 430px
       background #fff
@@ -576,6 +577,12 @@ th.next
           span
             display block
             text-align center
+      .full-descr
+        margin-top 15px
+        margin-bottom 10px
+    .product-fullDescr
+      display none
+      max-height 276px;
     .prepack-list
       float right
       margin-right 129px
