--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -395,6 +395,9 @@ th.next
     .order-products
       margin 10px 0 0 0
       display none
+    .order-edit
+    .order-confirm
+      font-size 12px
   .btn-primary
     margin 2px
     //float right
