действия незалогиненого юзера

--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -65,6 +65,9 @@ transform()
   padding 0 8px
   font-size 16px
 
+.user-menu li
+  text-align left
+
 .nav-list > li > a
   padding 8px 10px 10px 16px
   height auto
