--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -53,6 +53,9 @@ a {
   padding: 0 8px;
   font-size: 16px;
 }
+.user-menu li {
+  text-align: left;
+}
 .nav-list > li > a {
   padding: 8px 10px 10px 16px;
   height: auto;
