--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -476,7 +476,7 @@ th.next
 .ace-spinner
   width 50px !important
   .input-mini
-    width 30px
+    width 40px
     padding 5px 2px
   .spinner-down:hover
   .spinner-up:hover
@@ -511,6 +511,7 @@ th.next
         background-position 100% 0
       .slides li
         text-align center
+        line-height 180px
       img
         width auto
         float none
@@ -538,7 +539,8 @@ th.next
       overflow auto
     .product-options
       font-size 12px
-      color #ccc
+      line-height 18px
+      color #656565
       margin-bottom 10px
     .modal-body
       padding 10px
@@ -596,6 +598,7 @@ th.next
     .product-fullDescr
       display none
       max-height 276px;
+      line-height 22px
     .prepack-list
       float right
       margin-right 129px
@@ -619,9 +622,10 @@ th.next
     font-size 10px
     line-height 10px
 .modal-order-end
-  max-height 312px
+  height 360px
   .modal-body-list
-    max-height 148px
+    max-height 200px
+    display block
     overflow auto
     width 100%
     tbody
@@ -644,7 +648,7 @@ th.next
     width auto
     padding-right 10px
     font-size 20px
-    top 230px
+    top 280px
     .btn
       float right
       margin 5px
