--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -553,7 +553,7 @@ span
   width: 50px !important;
 }
 .ace-spinner .input-mini {
-  width: 30px;
+  width: 40px;
   padding: 5px 2px;
 }
 .ace-spinner .spinner-down:hover,
@@ -594,6 +594,7 @@ span
 }
 .modal .product-slider .flexslider .slides li {
   text-align: center;
+  line-height: 180px;
 }
 .modal .product-slider .flexslider img {
   width: auto;
@@ -628,7 +629,8 @@ span
 }
 .modal .product-options {
   font-size: 12px;
-  color: #ccc;
+  line-height: 18px;
+  color: #656565;
   margin-bottom: 10px;
 }
 .modal .modal-body {
@@ -699,6 +701,7 @@ span
 .modal .product-fullDescr {
   display: none;
   max-height: 276px;
+  line-height: 22px;
 }
 .modal .prepack-list {
   float: right;
@@ -728,10 +731,11 @@ span
   line-height: 10px;
 }
 .modal-order-end {
-  max-height: 312px;
+  height: 360px;
 }
 .modal-order-end .modal-body-list {
-  max-height: 148px;
+  max-height: 200px;
+  display: block;
   overflow: auto;
   width: 100%;
 }
@@ -759,7 +763,7 @@ span
   width: auto;
   padding-right: 10px;
   font-size: 20px;
-  top: 230px;
+  top: 280px;
 }
 .modal-order-end .modal-footer .btn {
   float: right;
