--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -599,8 +599,9 @@ th.next
         margin-top 15px
         margin-bottom 10px
     .product-fullDescr
-      display none
-      max-height 276px;
+      //display none
+      max-height 320px;
+      overflow auto
       line-height 22px
     .prepack-list
       float right
