--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -559,6 +559,9 @@ th.next
       padding-top 15px
       .fa-shopping-cart
         float right
+        font-size 24px
+        &:hover
+          text-decoration none
       span
       .ace-spinner
       .fa
@@ -663,6 +666,11 @@ th.next
       span
         margin 0
         vertical-align baseline
+  .delivery-in-modal
+    position absolute
+    bottom 50px
+    left 10px
+    font-size 16px
 
 .sidebar#sidebar
   height 100%
