фильтр дат с учетом closed day. demo

--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -260,7 +260,7 @@ th.next
   &:after
     content "Свободный день"
     margin-left -120px
-.free-day-with-order
+.day-with-order
   background-color #eee827
   &:after
     content "Свободный день с заказом"
@@ -277,7 +277,7 @@ th.next
     margin-left -60px
 .order-day:after
 .free-day:after
-.free-day-with-order:after
+.day-with-order:after
 .special-day:after
 .closed-day:after
   position absolute
@@ -288,7 +288,7 @@ th.next
   display none
 .order-day:hover:after
 .free-day:hover:after
-.free-day-with-order:hover:after
+.day-with-order:hover:after
 .special-day:hover:after
 .closed-day:hover:after
   display block
