--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -287,10 +287,10 @@ th.next,
   content: "Свободный день";
   margin-left: -120px;
 }
-.free-day-with-order {
+.day-with-order {
   background-color: #eee827;
 }
-.free-day-with-order:after {
+.day-with-order:after {
   content: "Свободный день с заказом";
   margin-left: -150px;
 }
@@ -310,7 +310,7 @@ th.next,
 }
 .order-day:after,
 .free-day:after,
-.free-day-with-order:after,
+.day-with-order:after,
 .special-day:after,
 .closed-day:after {
   position: absolute;
@@ -322,7 +322,7 @@ th.next,
 }
 .order-day:hover:after,
 .free-day:hover:after,
-.free-day-with-order:hover:after,
+.day-with-order:hover:after,
 .special-day:hover:after,
 .closed-day:hover:after {
   display: block;
