--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -214,6 +214,12 @@ transform()
             margin-right 5px
       #delivery-addr
         margin-left 0
+      .delivery-dropdown
+        float right
+        margin-top -5px
+        .dropdown-menu
+          left -233px
+          width 360px
     .alert-delivery
       color #ff0000
       display none
