--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -817,6 +817,17 @@ th.next
       text-decoration none
   .order-products
     display none
+  .back-orders-top
+    .form-group
+      margin-right 565px
+    .btn-group
+    .input-group
+      float right
+      margin-left 10px
+    .input-group
+      display inline-block
+    .dropdown-toggle
+      height 34px
 .import
   .form-import
     margin-bottom 10px
