--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -1,8 +1,4 @@
-@import 'bootstrap.min.css'
-@import 'font-awesome-original.css'
-@import 'font-awesome.min.css'
-@import 'ace-fonts.css'
-@import 'ace.css'
+//@import 'common.css'
 @import 'flexslider.css'
 @import 'login.css'
 
@@ -625,8 +621,6 @@ th.next
         &:hover
           opacity 1
   .error-prepack
-    display none
-    color #ff0000
     position absolute
     bottom -50px
     right 5px
