--- a/vonline_be/war/css/style.styl
+++ b/vonline_be/war/css/style.styl
@@ -1,8 +1,4 @@
-@import 'bootstrap.min.css'
-@import 'font-awesome-original.css'
-@import 'font-awesome.min.css'
-@import 'ace-fonts.css'
-@import 'ace.css'
+//@import 'common.css'
 @import 'login.css'
 
 main-radius = 2px
