вывод поля для ввода кода подтверждения на странице профиля

--- a/vonline_be/war/css/profile.styl
+++ b/vonline_be/war/css/profile.styl
@@ -32,6 +32,11 @@
         float right
         font-weight bold
         margin 17px 10px 0 0
+    .account-no-confirm
+      margin-top 20px
+      input[type="text"]
+        width 200px
+        display inline-block
     .user-body
       margin 15px 0 0 0
       line-height 26px
