--- a/vonline_be/war/css/profile.css
+++ b/vonline_be/war/css/profile.css
@@ -41,6 +41,13 @@
   font-weight: bold;
   margin: 17px 10px 0 0;
 }
+.user-descr .text-area .account-no-confirm {
+  margin-top: 20px;
+}
+.user-descr .text-area .account-no-confirm input[type="text"] {
+  width: 200px;
+  display: inline-block;
+}
 .user-descr .text-area .user-body {
   margin: 15px 0 0 0;
   line-height: 26px;
