для забыли пароль

--- a/vonline_be/war/css/login.styl
+++ b/vonline_be/war/css/login.styl
@@ -77,6 +77,17 @@
     color #ff0000
     display none
     text-align center
+  .set-new-password
+    display none
+    clear right
+    .btn
+      margin-top 10px
+      float right
+      margin-right 14px
+    #go2
+      position static
+      width 100px
+      float right
 
 #selectGroup
   margin-right 15px
