--- a/vonline_be/war/css/login.css
+++ b/vonline_be/war/css/login.css
@@ -94,6 +94,20 @@
   display: none;
   text-align: center;
 }
+.registration-form .set-new-password {
+  display: none;
+  clear: right;
+}
+.registration-form .set-new-password .btn {
+  margin-top: 10px;
+  float: right;
+  margin-right: 14px;
+}
+.registration-form .set-new-password #go2 {
+  position: static;
+  width: 100px;
+  float: right;
+}
 #selectGroup {
   margin-right: 15px;
   float: right;
