работа юзерменю сразу после логина

--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -48,6 +48,8 @@ a {
   padding: 0 8px;
   font-size: 16px;
 }
+/*.user-short .no-login+.user-menu
+  display none*/
 .user-menu li {
   text-align: left;
 }
