--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -61,6 +61,9 @@ transform()
   padding 0 8px
   font-size 16px
 
+/*.user-short .no-login+.user-menu
+  display none*/
+
 .user-menu li
   text-align left
 
