--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -383,6 +383,8 @@ th.next
           &:hover
             color #2a6496
             text-decoration none
+        .product-link
+          margin-left 0
         span
           display block
           margin-left 30px
@@ -814,6 +816,10 @@ th.next
       text-decoration none
   .order-products
     display none
+    .product-link
+      text-decoration none
+      color #000000
+      cursor default
   .back-orders-top
     .form-group
       margin-right 565px
