--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -834,6 +834,8 @@ th.next
 .import
   .form-import
     margin-bottom 10px
+    input[type="submit"]
+      margin-top 10px
 .export
   .export-btn
     margin-top 15px;
