--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -230,7 +230,7 @@ transform()
     font-size 14px
     color rgb(133, 133, 133)
   .btn-grey
-    margin-left 190px
+    margin-left 186px
     margin-right 10px
 
 .datepicker
@@ -695,6 +695,7 @@ th.next
     z-index 10
     padding 0 0 20px 0
     border-bottom 1px solid #ccc
+    overflow auto
     &:before
       display none
     .show-right
