БО: сброс фильтров, перекрестная фильтрация

--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -826,6 +826,7 @@ th.next
       margin-right 565px
     .btn-group
     .input-group
+    .reset-filters
       float right
       margin-left 10px
     .input-group
