--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -991,7 +991,8 @@ span
   margin-right: 565px;
 }
 .backoffice .back-orders-top .btn-group,
-.backoffice .back-orders-top .input-group {
+.backoffice .back-orders-top .input-group,
+.backoffice .back-orders-top .reset-filters {
   float: right;
   margin-left: 10px;
 }
