--- a/vonline_be/war/css/common.css
+++ b/vonline_be/war/css/common.css
@@ -5,7 +5,8 @@
 @import 'lib/ace.css';
 @import 'profile.css';
 @import 'settings.css';
-.error-info {
+.error-info,
+.confirm-info {
   display: none;
   color: #f00;
 }
