--- a/vonline_be/war/css/profile.styl
+++ b/vonline_be/war/css/profile.styl
@@ -46,6 +46,19 @@
         width 170px
         display inline-block
 
+.short.form-control
+  width 75px !important
+
+.datepicker-simple
+  width 470px !important
+  th.next
+    text-align right !important
+  th.dow
+    text-align center !important
+  .year
+  .month
+    margin 0 5px
+
 @media all and (max-width: 1024px)
   .user-descr
     .ava-area
