--- a/vonline_be/war/css/profile.styl
+++ b/vonline_be/war/css/profile.styl
@@ -59,6 +59,16 @@
   .month
     margin 0 5px
 
+.save-status
+  color #62c462
+  display none
+  margin-left 10px
+  font-size 16px
+  vertical-align middle
+
+.save-status.active
+  display inline-block
+
 @media all and (max-width: 1024px)
   .user-descr
     .ava-area
