--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -835,9 +835,15 @@ th.next
       height 34px
 .import
   .form-import
-    margin-bottom 10px
+    margin 10px 0
     input[type="submit"]
       margin-top 10px
+  .products-checklist
+  .categories-checklist
+  .producers-checklist
+    display none
+  .import-btn
+    margin-bottom 10px
 .export
   .export-btn
     margin-top 15px;
