--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -1019,6 +1019,10 @@ span
 .export .export-btn {
   margin-top: 15px;
 }
+.export .input-group {
+  display: inline-block;
+  margin-bottom: 10px;
+}
 .import,
 .export {
   display: none;
