--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -847,6 +847,9 @@ th.next
 .export
   .export-btn
     margin-top 15px;
+  .input-group
+    display inline-block
+    margin-bottom 10px
 
 .import
 .export
