--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -850,6 +850,20 @@ th.next
   .input-group
     display inline-block
     margin-bottom 10px
+  .report-links
+    line-height 34px
+    display inline-block
+    vertical-align middle
+    margin-top 15px
+    a
+      display inline-block
+      margin 0 0 0 10px
+      vertical-align middle
+  .export-orders-checklist
+  .export-orderLine-checklist
+    display inline-block
+    width 49%
+    vertical-align top
 
 .import
 .export
