--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -844,6 +844,9 @@ th.next
     display none
   .import-btn
     margin-bottom 10px
+  #import-data
+    display inline-block
+    vertical-align middle
 .export
   .export-btn
     margin-top 15px;
