--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -836,14 +836,30 @@ th.next
 .import
   .form-import
     margin 10px 0
+    display inline-block
+    margin-left 20px
     input[type="submit"]
       margin-top 10px
   .products-checklist
   .categories-checklist
   .producers-checklist
     display none
-  .import-btn
-    margin-bottom 10px
+  .import-show
+    display none
+    .import-btn
+      margin-bottom 10px
+    .import-field-dropdown
+      .btn
+        padding 0
+        border 0
+        font-size 12px
+    table
+      margin-bottom 10px
+      td
+        border 1px solid #000
+    .confirm-info
+      display inline-block
+      margin-left 10px
   #import-data
     display inline-block
     vertical-align middle
