--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -796,12 +796,16 @@ th.next
 
 /* popup логина */
 .modal-auth
-  width 643px
+  width 644px
   overflow hidden
-  height 260px
+  height 290px
   margin-left -327px
+  background none
   .login-forms
     margin 0
+    form
+      background #fff
+      height 270px
   .close
     margin-right -5px
 
@@ -895,7 +899,7 @@ th.next
   .input-group
     display inline-block
     margin-bottom 10px
-  .report-links
+  .report-link
     line-height 34px
     display inline-block
     vertical-align middle
