--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -887,15 +887,10 @@ th.next
         text-align center
         position relative
         border 1px solid #000
-    .confirm-info
-      display inline-block
-      margin-left 10px
   #import-data
     display inline-block
     vertical-align middle
 .export
-  .export-btn
-    margin-top 15px;
   .input-group
     display inline-block
     margin-bottom 10px
@@ -903,7 +898,6 @@ th.next
     line-height 34px
     display inline-block
     vertical-align middle
-    margin-top 15px
     a
       display inline-block
       margin 0 0 0 10px
@@ -913,6 +907,24 @@ th.next
     display inline-block
     width 49%
     vertical-align top
+  .export-table
+    .export-single-table
+      overflow-y auto
+    table
+      margin 20px 0 0 0
+      thead td
+        background #6fb3e0
+        color #fff
+      td
+        border 1px solid #000
+        text-align center
+  .export-btn-line
+    margin-top 15px
+
+
+.confirm-info
+  display inline-block
+  margin-left 10px
 
 .import
 .export
