--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -115,7 +115,7 @@ transform()
     display none
   .hide-right
     display none
-  .sidebar-title
+  /*.sidebar-title
     font-size 20px
     border-top 1px solid #ccc
     padding 4px 0 7px 0
@@ -132,7 +132,26 @@ transform()
     width 70%
     .input-group
     a
+      display block*/
+  .tabs-days
+    text-align center
+    .nav span
       display block
+    .tab-content
+      padding 0
+      padding-bottom 10px
+      background #fff
+    .basket-head
+      padding 15px 0 15px 15px
+      text-align left
+      .amount
+        font-size 16px
+        float right
+        margin-right 15px
+    .basket-bottom
+      .btn
+        float right
+        margin 15px 10px 0 0
   .catalog-order
     max-height 320px
     overflow-y auto
@@ -160,20 +179,19 @@ transform()
         display inline-block
         vertical-align middle
         line-height 16px
-        max-width 180px
+        max-width 129px
         span
           display none
-        .product-right-descr
-          display inline-block
-          vertical-align middle
       .ace-spinner
         display inline-block
         vertical-align middle
       .product-right-descr
+        display inline-block
+        vertical-align middle
         margin-left 10px
         margin-bottom 5px
         padding-right 20px
-        font-size 16px
+        font-size 14px
         line-height 16px
       .delete-product
         font-size 24px
