--- a/vonline_be/war/css/shop.css
+++ b/vonline_be/war/css/shop.css
@@ -940,12 +940,60 @@ span
   font-size: 16px;
 }
 .confirm-order .order-date {
-  padding: 15px 0 0 10px;
+  padding: 15px 0 15px 10px;
   font-weight: bold;
+}
+.confirm-order .catalog-confirm li {
+  list-style-type: none;
+  border-bottom: 1px solid #ccc;
+  overflow: auto;
+  padding: 10px 0 10px 10px;
+}
+.confirm-order .catalog-confirm li:first-child {
+  border-top: 1px solid #ccc;
+}
+.confirm-order .catalog-confirm li table {
+  float: right;
+  width: 60%;
+  height: 40px;
+}
+.confirm-order .catalog-confirm li table td {
+  width: 25%;
+  text-align: center;
+}
+.confirm-order .catalog-confirm li table td .ace-spinner {
+  vertical-align: middle;
+}
+.confirm-order .catalog-confirm li table td .unit-name {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 15px;
+}
+.confirm-order .catalog-confirm li table td .delete-product {
+  font-size: 24px;
+  color: #f00;
+}
+.confirm-order .catalog-confirm li table td .delete-product:hover {
+  text-decoration: none;
+}
+.confirm-order .catalog-confirm li .product-link span {
+  display: inline-block;
+  vertical-align: middle;
+  width: 40px;
+  text-align: center;
+}
+.confirm-order .catalog-confirm li .product-link img {
+  max-width: 40px;
+  max-height: 40px;
+}
+.confirm-order .catalog-confirm li .product-link .product-right-descr {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 40px;
 }
 .confirm-order .itogo-right {
   float: right;
-  padding-left: 10px;
+  padding-top: 15px;
   font-size: 16px;
 }
 .confirm-order .itogo-right span {
