--- a/vonline_be/war/css/shop.styl
+++ b/vonline_be/war/css/shop.styl
@@ -789,11 +789,51 @@ th.next
 .confirm-order
   font-size 16px
   .order-date
-    padding 15px 0 0 10px
+    padding 15px 0 15px 10px
     font-weight bold
+  .catalog-confirm
+    li
+      list-style-type none
+      border-bottom 1px solid #ccc
+      overflow auto
+      padding 10px 0 10px 10px
+      &:first-child
+        border-top 1px solid #ccc
+      table
+        float right
+        width 60%
+        height 40px
+        td
+          width 25%
+          text-align center
+          //padding-top 5px
+          .ace-spinner
+            vertical-align middle
+          .unit-name
+            display inline-block
+            vertical-align middle
+            margin-left 15px
+          .delete-product
+            font-size 24px
+            color #ff0000
+            &:hover
+              text-decoration none
+      .product-link
+        span
+          display inline-block
+          vertical-align middle
+          width 40px
+          text-align center
+        img
+         max-width 40px
+         max-height 40px
+        .product-right-descr
+          display inline-block
+          vertical-align middle
+          margin-left 40px
   .itogo-right
     float right
-    padding-left 10px
+    padding-top 15px
     font-size 16px
     span
       font-weight bold
